--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ h1 {
     flex-direction: row;
     justify-content: center;
     gap: 50px;
-
 }
 
 #main2 {
@@ -102,7 +101,7 @@ h1 {
 }
 
 .logo-insta {
-    height: 70px;
+    height: 65px;
 }
 */
 
@@ -153,4 +152,15 @@ a:hover {
     font-family: 'Sarala' sans-serif;
     font-weight: 400;
     color: #01CC78;
+}
+
+@media (max-width: 600px) {
+    .div-icon { 
+        display: flex;
+        flex-direction: column;
+    }
+
+    #descrição {
+        width: 100%;
+    }
 }
